# Singular

./: .codespell_ignore  .gdbinit  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  COPYING  C_CPP_StyleGuide.md  ChangeLog  HOWTO-libsingular  INSTALL  INSTALL.mac  INSTALL.unix  INSTALL.win  Includes.dot  Makefile.am  Makefile.in  README  README.dos  README.download  README.fink  README.general  README.mac  README.md  README.pSingular  README.pkg  README.share  README.src  README.win  Singular.pc.in  autogen.sh  build_standards  clone_autogen_generated_stuff.sh  config.guess  config.sub  configure  configure.ac  configure.in  configure.win  dmodloc.lib  (+15 more)
IntegerProgramming/: .cvsignore  BigInt.cc  BigInt.h  Buchberger.cc  COPYING  IP.lib  IP_algorithms.cc  IP_algorithms.h  Ikernel_to_send.c  LLL.cc  LLL.h  LLL_lattice_to_send.cc  Makefile.am  Makefile.in  README  binomial.cc  binomial.h  binomial__term_ordering.h  change_cost.cc  change_cost.hlp  gccversion.sh  gccversion.sh.SAVE  gen_test.cc  globals.h  ideal.cc  ideal.h  ideal_stuff.cc  list.cc  list.h  matrix.cc  matrix.h  si_gmp.h  solve_IP.cc  solve_IP.hlp  term_ordering.cc  term_ordering.h  testdata.cc  testdata.h  toric.lib  toric_ideal.cc  (+1 more)
MP/: COPYING  ChangeLog  INSTALL  Makefile.in  README  config.sub  configure  configure.in  pvmgetarch  values.h.subst
Singular/: .cvsignore  .gdbinit  .gitignore  CHANGES  CMakeLists.txt  COPYING  Cache.h  CacheImplementation.h  CanonicalPoly.cc  CanonicalPoly.h  ChangeLog  ChangeLog.310  ChangeLog.311  ChangeLog.312  ChangeLog.313  ChangeLog.314  ChangeLog.plural  Cone.cc  Cone.h  ESingular.man  Fan.cc  Fan.h  GMPrat.cc  GMPrat.h  HOWTO.FindMemoryHoles  HOWTO.addKernelCmds  INSTALL  InternPoly.cc  InternPoly.h  Makefile.am  Makefile.in  Minor.cc  Minor.h  MinorInterface.cc  MinorInterface.h  MinorProcessor.cc  MinorProcessor.h  ObjectFactory.cc  ObjectFactory.h  PolyWrapper.cc  (+468 more)
callpolymake/: Makefile  Makefile.in  README  configure  configure.in  polymake.cc  polymake_cdd_rename.patch  polymake_conversion.cc  polymake_conversion.h  polymake_documentation.cc  polymake_documentation.h  polymake_wrapper.cc
coeffs/: Makefile.in  Makefile~  coeffs.h  config.h.in  configure  configure.ac  configure.in  ffields.cc  ffields.h  gftables  gnumpc.cc  gnumpc.h  gnumpfl.cc  gnumpfl.h  inline_coeffs.h  longalg.cc  longalg.h  longrat.cc  longrat.cc~  longrat.h  longrat.h~  longrat0.cc  longtrans.h  modulop.cc  modulop.h  mpr_base.cc  mpr_base.h  mpr_complex.cc  mpr_complex.h  mpr_numeric.cc  mylimits.h  numbers.cc  numbers.h  rintegers.cc  rintegers.h  rmodulo2m.cc  rmodulo2m.h  rmodulon.cc  rmodulon.h  shortfl.cc  (+4 more)
desktop/: Makefile.am  Singular-manual.desktop.in  Singular.desktop.in
doc/: .cvsignore  .gitignore  Building-Singular-from-source.md  C-STYLEGUIDE  C-STYLEGUIDE.md  COPYING.plural.texi  COPYING.texi  C_CPP_StyleGuide.md  ChangeLog  DEPENDENCIES  DOWNLOAD_win.texi  Development-model.md  ESingular.man  GIT-fan.doc  HOWTO-libsingular  HOWTO.ispell  How-To-Contribute.md  INSTALL_mac.texi  INSTALL_osx.texi  INSTALL_rpm.texi  INSTALL_unix.plural.texi  INSTALL_unix.texi  INSTALL_win.plural.texi  INSTALL_win.texi  Includes.dot  Makefile-docbuild.in  Makefile.am  Makefile.bsp  Makefile.in  Makefile.lib2doc  NEWS-letterplace.texi  NEWS.plural.texi  NEWS.texi  PROBLEMS_win.texi  Porting-instructions.md  README  README_distribution.texi  README_download.plural.texi  README_download.texi  README_ftp.texi  (+78 more)
dox/: .gitignore  Doxyfile.html.all  Doxyfile.in  Doxyfile.in1  Doxyfile.latex.short  Makefile.am  footer.html  header.html  readme  stylesheet.css
dyn_modules/: Makefile.am  Makefile.in.SAVE  README  configure  configure.in  demo.mod  eigenval.mod  loctriv.mod  mega2003.mod  pcv.mod  python.mod
emacs/: .emacs-general  .emacs-singular  .gitignore  BUGS  COPYING  ChangeLog  ESingular.emacs21  Makefile.am  Makefile.in  NEWS  cmd-cmpl.el  cmpl.pl  ex-cmpl.el  hlp-cmpl.el  lib-cmpl.el  lib.pl  sing.xpm  singular.el  singular.el.decl  test.sing
factory/: .cvsignore  .gitignore  CMakeLists.txt  COPYING  ChangeLog  ConwayList.txt  DegreePattern.cc  DegreePattern.h  ExtensionInfo.cc  ExtensionInfo.h  FACTORY.INSTALL  FLINTconvert.cc  FLINTconvert.h  GNUmakefile.in  INSTALL  Makefile.am  NEWS  NTLconvert.cc  NTLconvert.h  README  abs_fac.cc  acinclude.m4  algext.cc  algext.h  assert.h  bifac.cc  bifac.h  bifacConfig.h  canonicalform.cc  canonicalform.h  cfCharSets.cc  cfCharSets.h  cfCharSetsUtil.cc  cfCharSetsUtil.h  cfEzgcd.cc  cfEzgcd.h  cfGEval.cc  cfGEval.h  cfGcdAlgExt.cc  cfGcdAlgExt.h  (+210 more)
findexec/: Makefile.am  configure.ac  feFopen.cc  feFopen.h  feResource.cc  feResource.h  omFindExec.c  omFindExec.h
gfanlib/: Makefile.am  Makefile.in  Makefile.in.save  README.txt  config.h.in  configure  configure.ac  gfanlib.h  gfanlib_circuittableint.cpp  gfanlib_circuittableint.h  gfanlib_field.cpp  gfanlib_field.h  gfanlib_matrix.h  gfanlib_mixedvolume.cpp  gfanlib_mixedvolume.h  gfanlib_paralleltraverser.cpp  gfanlib_paralleltraverser.h  gfanlib_polyhedralfan.cpp  gfanlib_polyhedralfan.h  gfanlib_polymakefile.cpp  gfanlib_polymakefile.h  gfanlib_q.h  gfanlib_symmetriccomplex.cpp  gfanlib_symmetriccomplex.h  gfanlib_symmetry.cpp  gfanlib_symmetry.h  gfanlib_traversal.cpp  gfanlib_traversal.h  gfanlib_tropicalhomotopy.h  gfanlib_vector.h  gfanlib_z.h  gfanlib_zcone.cpp  gfanlib_zcone.h  gfanlib_zfan.cpp  gfanlib_zfan.h  gfanlibtest.cpp  test.cpp
kernel/: .cvsignore  .gitignore  Add-Kernel-Subpackage.md  AlgebraicExt.cc  AlgebraicExt.h  CCRing.h  CMakeLists.txt  COPYING  ChangeLog  ChangeLog.plural  F4.cc  F4.h  F5cData.cc  F5cData.h  F5cLists.cc  F5cLists.h  GMPrat.cc  GMPrat.h  HOWTO.FindMemoryHoles  IIntvec.h  Ideal.h  LinearAlgebra.cc  LinearAlgebra.h  MOD  Makefile.am  Makefile.in  Makefile.in.SAVE  MinorInterface.cc  MinorProcessor.h  Number.h  Poly.h  PowerSeries.h  README  RULES  RatFunctField.cc  RatFunctField.h  SDBase-old.cc  SDBase.cc  SDBase.h  SDBase.new.h  (+335 more)
libfac/: 00README  CMakeLists.txt  COPYING  ChangeLog  Makefile.dist  Makefile.in  Makefile.in.SAVE_LIBFAC  configure  (+5 more)
(+11875 files in other folders)
